# ComicBookAPI

./: README.md  pyproject.toml
config/config/: settings.py  urls.py
config/marvel/: admin.py  models.py
config/marvel/api/: urls.py
config/marvel/api/v1/: marvel_data.py  serializers.py  urls.py  views.py
config/marvel/migrations/: 0001_initial.py  0002_alter_comicbook_description.py  0002_alter_comicbook_options_comicbook_published.py
